--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1028,14 +1028,53 @@ textarea.contact-input {
     opacity: 0.8;
   }
 
+  .shrink-hover {
+  transition: transform 1s ease;
+}
+
+.shrink-hover:hover {
+  transform: scale(0.80); /* Adjust scale as needed */
+}
+
+  .shrink-hover1 {
+  transition: transform 1s ease-in;
+}
+
+
+.shrink1-hover:hover {
+  transform: scale(0.50); /* Adjust scale as needed */
+}
+
   .abs-img {
     width: 250px;
     height: 250px;
     object-fit: cover;
     border-radius: inherit;
+    position: absolute;
     bottom: -150px;
     left: -100px;
+    opacity: 0;
+    transform: translateX(-200px);
+    transition: transform 2s ease-out, opacity 1s ease-out;
   }
+
+  .abs-img.visible {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+.hidden-right {
+  opacity: 0;
+  transform: translateX(200px);
+  transition: transform 1s ease-out, opacity 1s ease-out;
+}
+
+.hidden-right.visible {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+ 
 
   .abs-icon {
     font-size: 5rem;
@@ -1142,6 +1181,15 @@ textarea.contact-input {
   .blog-list {
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
+  }
+
+  .container1 {
+    padding: 20px;
+    margin: 10px auto;
+    background: radial-gradient(circle at top right, #524f4f, #263169);
+    border-radius: 20px;
+    color: white;
+    box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
   }
 
   /**
