--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1092,7 +1092,7 @@ textarea.contact-input {
     background-color: var(--space-cadet);
     border: 2px solid #0e76a8; /* LinkedIn blue */
     border-radius: 50%;
-    color: #0e76a8;
+    color: #d8dfe2;
     text-decoration: none;
     transition: background-color 0.3s, color 0.3s;
     font-size: 20px;
